20071227
	add styxflush(2) etc.
	add NetBSD, emu/NetBSD
20071217
	emu/port/devmnt.c needs volatile for alloc
20071213
	emu/port/dev.c needs volatile for alloc
20071129
	emu/port/devip.c: moan about bad IP addresses
20071127
	added /module/dial.m and /appl/lib/dial.b
20071031
	module/keyring.m and libinterp/keyring.c: add algorithm-specific adts for public key systems
	appl/lib/spki/spki.b: correct names for dsa parameters
20071030
	libkeyring/rsaalg.c should call rsaprivfree not free
20071027
	appl/lib/names.b correction for "/" as prefix
20071019
	change emu/port/devfs-posix.c to update uid/gid map incrementally
20071015
	add cap creation to infauth in server role in factotum
20071011
	remove obsolete references to sh-exception(2)
20071010
	add abhey's changes for cmd key as unicode compose key for MacOS X to emu/MacOSX/win.c
20071008
	nemo's change to emu/port/random.c; really the file needs a little rewriting for clarity (too many overlapping states)
20071002
	ensure fmtdef.h included by some lib9 functions so that va_copy is defined on older systems that lack that needless notion
	<{} and >{} added to sh(1)
20070929
	move emu/MacOSX/mkfile to .../mkfile-x11 and replace it by the variant that builds for Carbon, now the default
20070927
	add working drawcursor to emu/MacOSX/win.c, based on mirtchovski's changes (but mapping general cursor images to Mac's form)
20070910
	update spki(2) [change handling of hashes, add signature functions] appl/lib/spki/spki.b module/spki.m, updated for GSoC
20070906
	add toreal to string(2)
20070905
	/appl/cmd/ed.b (caerwyn's fix for g/.../d)
	also /appl/lib/ecmascript/builtin.b (toupper fix)
20070902
	make /appl/lib/daytime.b accept Daytime->text's output; add string2tm to man page (issue 59)
20070901
	add andrey's changes to emu/MacOSX/win.c (used by emu/MacOSX/mkfile-a)
	add saoret's changes to dis/lookman, dis/man (issue 58)
	add micah.stetson's change to /appl/cmd/src.b (issue 57)
20070817